gitops/sonarqube/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sonarqube
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: sonarqube
    weight: 100
  wildcardPolicy: None
